--- a/simple-messenger-rest/src/main/resources/application.conf
+++ b/simple-messenger-rest/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka {
 }
 
 service {
-    host = "localhost"
+    host = "0.0.0.0" #for docker
     port = 8080
 }
 
@@ -20,10 +20,11 @@ sqlite {
   db {
     slick.driver = scala.slick.driver.SQLiteDriver
     driver = org.sqlite.JDBC
-    url = "jdbc:sqlite:/Users/taranjitsingh/sqlite-dir/localdatabase.db"
+    #url = "jdbc:sqlite:/Users/taranjitsaini/sqlite-dir/localdatabase.db"
+    url = "jdbc:sqlite:"
     connectionPool = HikariCP
     connectionTimeout = 10000
   }
   numThreads = 100
-  dir = "/Users/taranjitsingh/sqlite-dir/"
+  dir = "/home/app/sqlite-dir/"
 }
